# IA-PR1

./: README.md  id5-bfs.txt  id5-dfs.txt  id6-bfs.txt  id6-dfs.txt  pyproject.toml
docs/: README.md
ia_pr1/: __init__.py  __main__.py  command.py  graph.py  main.py  parser.py  search_tree.py  tree.py  utils.py
